// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1. no child elements 1`] = `
<RCTScrollView
  initialNumToRender={5}
  listKey=""
  removeClippedSubviews={true}
  scrollEventThrottle={50}
  windowSize={3}
>
  <View />
</RCTScrollView>
`;

exports[`2. a single child element 1`] = `
<RCTScrollView
  data={
    Array [
      <ExampleChild
        id="standard-1"
      >
        standard-1
      </ExampleChild>,
    ]
  }
  initialNumToRender={5}
  listKey="0"
  removeClippedSubviews={true}
  scrollEventThrottle={50}
  windowSize={3}
>
  <View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-1
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`3. two child elements 1`] = `
<RCTScrollView
  data={
    Array [
      <test
        tile={
          Object {
            "article": Object {
              "id": "testId",
            },
          }
        }
      />,
      <ExampleChild
        id="standard-1"
      >
        standard-1
      </ExampleChild>,
      <ExampleChild
        id="standard-2"
      >
        standard-2
      </ExampleChild>,
    ]
  }
  initialNumToRender={5}
  listKey="testId12"
  removeClippedSubviews={true}
  scrollEventThrottle={50}
  windowSize={3}
>
  <View>
    <View>
      <View>
        <test
          tile={
            Object {
              "article": Object {
                "id": "testId",
              },
            }
          }
        />
        <View />
      </View>
    </View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-1
        </Text>
        <View />
      </View>
    </View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-2
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;

exports[`4. three child elements 1`] = `
<RCTScrollView
  data={
    Array [
      <ExampleChild
        id="standard-1"
      >
        standard-1
      </ExampleChild>,
      <ExampleChild
        id="standard-2"
      >
        standard-2
      </ExampleChild>,
      <ExampleChild
        id="standard-3"
      >
        standard-3
      </ExampleChild>,
    ]
  }
  initialNumToRender={5}
  listKey="012"
  removeClippedSubviews={true}
  scrollEventThrottle={50}
  windowSize={3}
>
  <View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-1
        </Text>
        <View />
      </View>
    </View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-2
        </Text>
        <View />
      </View>
    </View>
    <View>
      <View>
        <Text
          allowFontScaling={false}
        >
          standard-3
        </Text>
      </View>
    </View>
  </View>
</RCTScrollView>
`;
